--- a/popup.html
+++ b/popup.html
@@ -1,39 +1,12 @@
 <!doctype html>
 <html>
   <head>
-    <title>Set Page Color Popup</title>
-    <style>
-    body {
-      overflow: hidden;
-      margin: 0px;
-      padding: 0px;
-      background: white;
-    }
-
-    div:first-child {
-      margin-top: 0px;
-    }
-
-    div {
-      cursor: pointer;
-      text-align: center;
-      padding: 1px 3px;
-      font-family: sans-serif;
-      font-size: 0.8em;
-      width: 50px;
-      height: 15px;
-      margin-top: 1px;
-      background: #cccccc;
-
-    }
-    div:hover {
-      background: #aaaaaa;
-    }
-    </style>
-    <script src="popup.js"></script>
+    <title>Fast Forward Speed Control</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div id=">>">>></div>
-    <div id="<<"><<</div>
+    <div id="increase">&gt;&gt;</div>
+    <div id="decrease">&lt;&lt;</div>
+    <script src="popup.js"></script>
   </body>
 </html>
